--- a/src/app/components/taskdocuments/taskdocuments.component.html
+++ b/src/app/components/taskdocuments/taskdocuments.component.html
@@ -7,54 +7,31 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        Id :
+                        InstitutionName :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="taskdocuments.Id" placeholder="Id">
+                        <input type="text" id="txtskill" class="form-control" Name="txtskill"
+                            [(ngModel)]="taskdocuments.InstitutionName" placeholder="InstitutionName">
                     </div>
                     <div class="col-md-3">
-                        TaskId :
+                        QualificationtypeId :
                     </div>
                     <div class="col-md-3">
-                      
+                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
+                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
+                        </select> -->
                         <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="taskdocuments.TaskId" placeholder="TaskId" />
+                            [(ngModel)]="taskdocuments.QulificationTypeId" placeholder="QualificationtypeId" />
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        FileType :
+                        MediumId :
                     </div>
                     <div class="col-md-3">
-                        <input type="text" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="taskdocuments.FileType" placeholder="FileType" />
+                        <input type="number" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="taskdocuments.MediumId" placeholder="MediumId" />
                     </div>
-
-                    <div class="col-md-3">
-                        FileName :
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="taskdocuments.FileName" placeholder="FileName" />
-                    </div>
-                    <div class="col-md-3">
-                        File :
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="taskdocuments.File" placeholder="File" />
-                    </div>
-
-                    <div class="col-md-3">
-                        Description :
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="taskdocuments.Description" placeholder="Description" />
-                    </div>
-
-
                 </div>
 
                 <div class="row " style="padding-bottom: 10px;">
@@ -79,12 +56,9 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>Id</th>
-                                        <th>TaskId</th>
-                                        <th>FileType</th>
-                                        <th>FileName</th>
-                                        <th>File</th>
-                                        <th>Description</th>
+                                        <th>InstitutionName</th>
+                                        <th>QualificationtypeId</th>
+                                        <th>MediumId</th>
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -97,14 +71,9 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                    
-                                        <td>{{item.Id}}</td>
-                                        <td>{{item.TaskId}}</td>
-                                        <td>{{item.FileType}}</td>
-                                        <td>{{item.FileName}}</td>
-                                        <td>{{item.File}}</td>
-                                        <td>{{item.Description}}</td>
-                                        
+                                        <td>{{item.InstitutionName}}</td>
+                                        <td>{{item.QulificationTypeId}}</td>
+                                        <td>{{item.MediumId}}</td>
                                         <td><button class="btn btn-info" (click)="GetTaskDocumentsById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteTaskDocuments(item.Id)"> Delete
