--- a/src/app/components/usercourses/usercourses.component.html
+++ b/src/app/components/usercourses/usercourses.component.html
@@ -4,50 +4,33 @@
             <div class='card-header'>
                 <h1>UserCourses</h1>
             </div>
-           
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        Id :
+                        InstitutionName :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="usercourses.Id" placeholder="Id">
+                        <input type="text" id="txtskill" class="form-control" Name="txtskill"
+                            [(ngModel)]="usercourses.InstitutionName" placeholder="InstitutionName">
                     </div>
                     <div class="col-md-3">
-                        CourseId :
+                        QualificationtypeId :
                     </div>
                     <div class="col-md-3">
-                        
+                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
+                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
+                        </select> -->
                         <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="usercourses.CourseId" placeholder="CourseId" />
+                            [(ngModel)]="usercourses.QulificationTypeId" placeholder="QualificationtypeId" />
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        IsPrimary :
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="usercourses.IsPrimary" placeholder="IsPrimary" />
-                    </div>
-
-                    <br><br>
-                    <div class="col-md-3">
-                        UserId :
+                        MediumId :
                     </div>
                     <div class="col-md-3">
                         <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="usercourses.UserId" placeholder="UserId" />
-                    </div>
-
-                    <br><br>
-                    <div class="col-md-3">
-                        OrderId :
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="usercourses.OrderId" placeholder="OrderId" />
+                            [(ngModel)]="usercourses.MediumId" placeholder="MediumId" />
                     </div>
                 </div>
 
@@ -73,12 +56,9 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>Id</th>
-                                        <th>CourseId</th>
-                                        <th>IsPrimary</th>
-                                        <th>UserId</th>
-                                        <th>OrderId</th>
-                                        
+                                        <th>InstitutionName</th>
+                                        <th>QualificationtypeId</th>
+                                        <th>MediumId</th>
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -91,12 +71,9 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.Id}}</td>
-                                        <td>{{item.CourseId}}</td>
-                                        <td>{{item.IsPrimary}}</td>
-                                        <td>{{item.UserId}}</td>
-                                        <td>{{item.OrderId}}</td>
-                                        
+                                        <td>{{item.InstitutionName}}</td>
+                                        <td>{{item.QulificationTypeId}}</td>
+                                        <td>{{item.MediumId}}</td>
                                         <td><button class="btn btn-info" (click)="GetUserCoursesById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteUserCourses(item.Id)"> Delete
