--- a/src/app/components/usertypes/usertypes.component.html
+++ b/src/app/components/usertypes/usertypes.component.html
@@ -4,32 +4,33 @@
             <div class='card-header'>
                 <h1>UserTypes</h1>
             </div>
-            
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        Id :
+                        InstitutionName :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="usertypes.Id" placeholder="Id">
+                        <input type="text" id="txtskill" class="form-control" Name="txtskill"
+                            [(ngModel)]="usertypes.InstitutionName" placeholder="InstitutionName">
                     </div>
                     <div class="col-md-3">
-                        Name :
+                        QualificationtypeId :
                     </div>
                     <div class="col-md-3">
-                      
-                        <input type="text" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="usertypes.Name" placeholder="Name" />
+                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
+                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
+                        </select> -->
+                        <input type="number" name="txtcode" class="form-control" id="txtcode"
+                            [(ngModel)]="usertypes.QulificationTypeId" placeholder="QualificationtypeId" />
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        Code :
+                        MediumId :
                     </div>
                     <div class="col-md-3">
-                        <input type="text" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="usertypes.Code" placeholder="Code" />
+                        <input type="number" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="usertypes.MediumId" placeholder="MediumId" />
                     </div>
                 </div>
 
@@ -53,11 +54,11 @@
                             <h2>UserTypes Data</h2>
 
                             <table class="table table-bordered">
-                                <thead> 
+                                <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>Id</th>
-                                        <th>Name</th>
-                                        <th>Code</th>
+                                        <th>InstitutionName</th>
+                                        <th>QualificationtypeId</th>
+                                        <th>MediumId</th>
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -70,9 +71,9 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.Id}}</td>
-                                        <td>{{item.Name}}</td>
-                                        <td>{{item.Code}}</td>
+                                        <td>{{item.InstitutionName}}</td>
+                                        <td>{{item.QulificationTypeId}}</td>
+                                        <td>{{item.MediumId}}</td>
                                         <td><button class="btn btn-info" (click)="GetUserTypesById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteUserTypes(item.Id)"> Delete
